--- a/style.css
+++ b/style.css
@@ -1,44 +1,118 @@
 * {
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'TT Norms Pro', sans-serif;
 }
 
-body {
-	background-color: #0097B2;
+.bg-degradado {
+	background: rgb(81, 112, 255);
+	background: linear-gradient(125deg, rgba(81, 112, 255, 1) 0%, rgba(255, 102, 196, 1) 100%);
 }
 
 .logoApp {
-	background-color: #127586;
-	width: 11rem;
-	height: 11rem;
+	background: rgb(81, 112, 255);
+	background: linear-gradient(0deg, rgba(81, 112, 255, 1) 0%, rgba(255, 102, 196, 1) 100%);
+	width: 30rem;
+	height: 30rem;
+	border-radius: 4rem !important;
 	display: grid;
 	place-content: center;
 }
 
-.material-symbols-outlined {
-	line-height: normal !important;
+.divCenter {
+	display: grid;
+	place-content: center;
 }
 
 .card {
 	height: 45rem !important;
 }
 
-h1 {
-	font-size: 50pt !important;
+.title-todo {
+	font-size: 6.7rem !important;
+	font-weight: bold;
+}
+
+.title-alex {
+	font-family: 'Mistrully', sans-serif !important;
+	color: #CB6CE6;
+	font-size: 4.5rem !important;
+	position: relative;
+	top: 5.6rem;
+}
+
+.title-funciones {
+	font-size: 5.5rem !important;
+	font-weight: bold;
+}
+
+.subtitle-funciones {
+	font-size: 1.9rem !important;
+	font-weight: bold;
+}
+
+.text-funciones {
+	width: 28rem !important;
+	font-weight: 300;
+	font-size: 1.9rem !important;
+}
+
+.px-6 {
+	padding-right: 11rem !important;
+	padding-left: 11rem !important;
+}
+
+.ps-6 {
+	padding-left: 10rem !important;
+}
+
+.py-5{
+	padding-top: 11rem !important;
+	padding-bottom: 11rem !important;
 }
 
 .logo {
-	font-size: 100pt !important;
-}
-
-
-.btnPruebala {
-	--bs-btn-padding-y: .25rem !important;
-	--bs-btn-padding-x: 5.5rem !important;
-	--bs-btn-font-size: 2.5rem !important;
+	font-size: 25rem !important;
 }
 
 a.nav-link.active {
 	font-size: 13pt;
 	font-weight: bold;
 	text-decoration: underline !important;
+}
+
+@media (max-width: 576px) {
+	.logoApp {
+		width: 15rem;
+		height: 15rem;
+		border-radius: 3rem !important;
+	}
+
+	.logo {
+		font-size: 15rem !important;
+	}
+
+	.px-6 {
+		padding-right: 2rem !important;
+		padding-left: 2rem !important;
+	}
+
+	.ps-6 {
+		padding-left: 3rem !important;
+		padding-top: 0.8rem;
+	}
+
+	.title-funciones {
+		font-size: 4.5rem !important;
+		font-weight: bold;
+	}
+	
+	.subtitle-funciones {
+		font-size: 1.9rem !important;
+		font-weight: bold;
+	}
+	
+	.text-funciones {
+		width: 28rem !important;
+		font-weight: 300;
+		font-size: 1.9rem !important;
+	}
 }
