--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
 .logoApp {
 	background: rgb(81, 112, 255);
 	background: linear-gradient(0deg, rgba(81, 112, 255, 1) 0%, rgba(255, 102, 196, 1) 100%);
-	width: 25rem;
-	height: 25rem;
+	width: 30rem;
+	height: 30rem;
 	border-radius: 4rem !important;
 	display: grid;
 	place-content: center;
@@ -22,14 +22,14 @@
 }
 
 .title-todo {
-	font-size: 5.6rem !important;
+	font-size: 6.7rem !important;
 	font-weight: bold;
 }
 
 .title-alex {
 	font-family: 'Mistrully', sans-serif !important;
 	color: #CB6CE6;
-	font-size: 4rem !important;
+	font-size: 4.5rem !important;
 	position: relative;
 	top: 5.6rem;
 }
@@ -59,7 +59,41 @@ a.nav-link.active {
 	text-decoration: underline !important;
 }
 
+/* 4 5.6 25 */
+
+@media (min-width: 1440px) and (max-height: 900px){
+
+	.logoApp {
+		background: rgb(81, 112, 255);
+		background: linear-gradient(0deg, rgba(81, 112, 255, 1) 0%, rgba(255, 102, 196, 1) 100%);
+		width: 25rem;
+		height: 25rem;
+		border-radius: 4rem !important;
+		display: grid;
+		place-content: center;
+	}
+
+	.logo {
+		font-size: 25rem !important;
+	}
+
+	.title-todo {
+		font-size: 5.6rem !important;
+		font-weight: bold;
+	}
+
+	.title-alex {
+		font-family: 'Mistrully', sans-serif !important;
+		color: #CB6CE6;
+		font-size: 4rem !important;
+		position: relative;
+		top: 5.6rem;
+	}
+
+}
+
 @media (max-width: 1440px) {
+
 	/* ANTES 1024px */
 	.logoApp {
 		width: 25rem !important;
@@ -92,19 +126,19 @@ a.nav-link.active {
 		font-size: 1.4rem !important;
 	}
 
-	.w-50{
+	.w-50 {
 		width: 50vw !important;
 	}
 
-	.w-25{
+	.w-25 {
 		width: 15vw !important;
 	}
 
 	.card {
 		height: 65vh !important;
-	} 
+	}
 
-	.fs-6{
+	.fs-6 {
 		font-size: 0.7rem !important;
 	}
 
@@ -114,7 +148,7 @@ a.nav-link.active {
 
 }
 
-@media (min-width: 1024px) and (max-width: 1440px){
+@media (min-width: 1024px) and (max-width: 1440px) {
 	.logoApp {
 		width: 20rem !important;
 		height: 20rem !important;
@@ -160,19 +194,19 @@ a.nav-link.active {
 		margin-bottom: 3rem !important;
 	}
 
-	.w-50{
+	.w-50 {
 		width: 50vw !important;
 	}
 
-	.w-25{
+	.w-25 {
 		width: 25vw !important;
 	}
 
 	.card {
 		height: 65vh !important;
-	} 
+	}
 
-	.fs-6{
+	.fs-6 {
 		font-size: 1rem !important;
 	}
 
@@ -228,24 +262,24 @@ a.nav-link.active {
 		margin-bottom: 3rem !important;
 	}
 
-	#todo-app{
+	#todo-app {
 		flex-direction: column;
 	}
 
 
-	.w-50{
+	.w-50 {
 		width: 80vw !important;
 	}
 
-	.w-25{
+	.w-25 {
 		width: 80vw !important;
 	}
 
-	.todo-home{
+	.todo-home {
 		height: 85vh !important;
 	}
 
-	.fs-6{
+	.fs-6 {
 		font-size: 1rem !important;
 	}
 
@@ -288,7 +322,7 @@ a.nav-link.active {
 		margin-top: 3rem !important;
 	}
 
-	.fs-6{
+	.fs-6 {
 		font-size: 1rem !important;
 	}
 
